fix: alignment issues in footer

--- a/style.css
+++ b/style.css
@@ -227,14 +227,16 @@ h6 {
 .min-w-300px {
   min-width: 300px;
 }
-
+.min-w-12 {
+  min-width: 3rem;
+}
 /*Desktop*/
 @media (min-width: 1024px) {
-  .lg\:basis-3\/4 {
-    flex-basis: 75%;
+  .lg\:basis-3\/5 {
+    flex-basis: 60%;
   }
-  .lg\:basis-1\/4 {
-    flex-basis: 25%;
+  .lg\:basis-2\/5 {
+    flex-basis: 40%;
   }
   .lg\:justify-end {
     justify-content: flex-end;
